--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.0",
-    "fs": "^0.0.1-security"
+    "body-parser": "^1.19.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
